# rag-agent-study

./: .env.example  .gitignore  ASSIGNMENT.md  README.md  pyproject.toml
assignments/Parkhaeil/week1/: graph.py  run.ipynb  schema.py  tools.py  week1_shopping_agent.ipynb
assignments/Parkhaeil/week2/: README.md  graph.py  requirements.txt  run.ipynb  schema.py
assignments/Parkhaeil/week3/: chunking_compare.ipynb  requirements.txt  run.ipynb
assignments/Parkhaeil/week4/: requirements.txt  run.ipynb
assignments/daexvk/data/: README.md  sources.json
assignments/daexvk/week1/: graph.py  run.py  schema.py  tools.py  week1_mission.ipynb
assignments/daexvk/week2/: graph.py  schema.py  tools.py  week2_mission.ipynb
assignments/daexvk/week3/: README.md  rag_pipeline.py  week3_mission.ipynb
assignments/latteeea/week1/: graph.py  mock_data.py  run.py  tools.py
week1-langgraph-basics/: 01-LangGraph-Models.ipynb  02-LangGraph-Messages.ipynb  03-LangGraph-Building-Graphs.ipynb  05-LangGraph-ChatBot.ipynb  06-LangGraph-ToolNode.ipynb
week2-langgraph-advanced/: 01-LangGraph-Graph-API.ipynb  02-LangGraph-Add-Memory.ipynb  03-LangGraph-Streaming-Outputs.ipynb  04-LangGraph-Human-In-the-Loop.ipynb  05-LangGraph-Branching.ipynb  06-LangGraph-Subgraph.ipynb  07-LangGraph-Subgraph-Transform-State.ipynb
week3-rag-basics/: 01-LangGraph-Retrieval.ipynb  02-LangGraph-RAG-Building-Graphs.ipynb  03-LangGraph-Naive-RAG.ipynb  04-LangGraph-Groundedness-Check.ipynb  05-LangGraph-Add-Web-Search.ipynb  06-LangGraph-Add-Query-Rewrite.ipynb
week3-rag-basics/rag/: base.py  utils.py
(+230 files in other folders)
