[project]
name = "rag-agent-study"
version = "0.1.0"
description = "6-week LangGraph, RAG, and Agent study curriculum based on braincrew-lab/langgraph-v1-tutorial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "faiss-cpu>=1.13.2",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-experimental>=0.4.1",
    "langchain-neo4j>=0.3.0,<0.8.0",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-supervisor>=0.0.31",
    "langsmith>=0.4.0",
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
